[package]
name = "h3arrow"
version = "0.1.0"
edition = "2021"
authors = ["Nico Mandery <nico@nmandery.net>"]
license = "MIT"
keywords = ["geo", "spatial", "h3"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3arrow"
repository = "https://github.com/nmandery/h3arrow"

[package.metadata.docs.rs]
all-features = true

[features]
geoarrow = ["dep:geoarrow", "dep:geozero"]
rayon = ["dep:rayon"]
spatial_index = ["dep:rstar"]

[dependencies]
ahash = "0.8"
arrow2 = { version = "0.17", features = [] }
geo = "0.25"
geoarrow = { git = "https://github.com/geopolars/geoarrow", rev = "fefafeb493269685c1f1431032e01bc859b98e58", optional = true }
geo-types = "0.7"
geozero = { version = "0.9", default-features = false, features = ["with-geo", "with-wkb"], optional = true }
h3o = { version = "0.3", features = ["geo"] }
nom = "7"
rayon = { version = "1", optional = true }
thiserror = "1"
rstar = { version = "0.11", optional = true}