[package]
name = "h3arrow"
version = "0.4.0"
edition = "2021"
authors = ["Nico Mandery <nico@nmandery.net>"]
description = "Integration of the H3 geospatial grid with the arrow memory model"
license = "MIT"
keywords = ["geo", "spatial", "h3", "arrow"]
readme = "README.md"
homepage = "https://github.com/nmandery/h3arrow"
repository = "https://github.com/nmandery/h3arrow"

[package.metadata.docs.rs]
all-features = true

[features]
geoarrow = ["dep:geoarrow", "dep:geozero"]
rayon = ["dep:rayon", "geoarrow/rayon"]
spatial_index = ["dep:rstar"]

[dependencies]
ahash = "0.8"
arrow = "50"
geo = "0.28"
geoarrow = { package = "geoarrow", version = "0.1.0", optional = true, features = ["geozero"] }
geo-types = "0.7"
geozero = { version = "0.11", default-features = false, features = ["with-geo", "with-wkb"], optional = true }
h3o = { version = "0.6", features = ["geo"] }
nom = "7"
rayon = { version = "1", optional = true }
thiserror = "1"
rstar = { version = "0.12", optional = true}